--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -25,8 +25,8 @@
     <button
       type="submit"
       class="btn btn-primary"
-      [disabled]="loginForm.invalid"
     >
+      <!-- [disabled]="loginForm.invalid" -->
       Login
     </button>
   </form>
