--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -32,4 +32,6 @@
   </form>
 </div>
 
+<button (click)="logout()">Logout</button>  <br/><br/>
+
 <button (click)="callApi()">check API call</button>
