--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,7 @@
 
 <button type="button" routerLink="/customers">Customers</button> <br />
 <button type="button" routerLink="/orders">Orders</button> <br />
+<button type="button" routerLink="/dashboard">Dashboard</button> <br />
 <button type="button" routerLink="/">Home</button> <br /><br />
 <br />
 
